y.output

state 0
	$accept: .program $end 
	program: .    (2)

	.  reduce 2 (src line 49)

	program  goto 1

state 1
	$accept:  program.$end 
	program:  program.statement EOL 

	$end  accept
	TYPE  shift 8
	IDENTIFY  shift 6
	PRINT  shift 7
	.  error

	statement  goto 2
	assignStatement  goto 3
	printStatement  goto 4
	defineStatement  goto 5

state 2
	program:  program statement.EOL 

	EOL  shift 9
	.  error


state 3
	statement:  assignStatement.    (8)

	.  reduce 8 (src line 79)


state 4
	statement:  printStatement.    (9)

	.  reduce 9 (src line 81)


state 5
	statement:  defineStatement.    (10)

	.  reduce 10 (src line 82)


state 6
	assignStatement:  IDENTIFY.assign 

	ASSIGN  shift 11
	.  error

	assign  goto 10

state 7
	printStatement:  PRINT.'(' expression ')' 

	'('  shift 12
	.  error


state 8
	defineStatement:  TYPE.IDENTIFY 
	defineStatement:  TYPE.IDENTIFY assign 

	IDENTIFY  shift 13
	.  error


state 9
	program:  program statement EOL.    (1)

	.  reduce 1 (src line 47)


state 10
	assignStatement:  IDENTIFY assign.    (6)

	.  reduce 6 (src line 69)


state 11
	assign:  ASSIGN.expression 

	IDENTIFY  shift 21
	INT_LITERAL  shift 19
	DOUBLE_LITERAL  shift 20
	ADD  shift 23
	SUB  shift 24
	NOT  shift 25
	'('  shift 22
	.  error

	expression  goto 14
	atomExpression  goto 17
	unaryExpression  goto 16
	binaryOrAtomExpression  goto 15
	unaryOperator  goto 18

state 12
	printStatement:  PRINT '('.expression ')' 

	IDENTIFY  shift 21
	INT_LITERAL  shift 19
	DOUBLE_LITERAL  shift 20
	ADD  shift 23
	SUB  shift 24
	NOT  shift 25
	'('  shift 22
	.  error

	expression  goto 26
	atomExpression  goto 17
	unaryExpression  goto 16
	binaryOrAtomExpression  goto 15
	unaryOperator  goto 18

state 13
	defineStatement:  TYPE IDENTIFY.    (4)
	defineStatement:  TYPE IDENTIFY.assign 

	ASSIGN  shift 11
	.  reduce 4 (src line 59)

	assign  goto 27

state 14
	assign:  ASSIGN expression.    (3)

	.  reduce 3 (src line 52)


state 15
	binaryOrAtomExpression:  binaryOrAtomExpression.'+' unaryExpression 
	expression:  binaryOrAtomExpression.    (22)

	'+'  shift 28
	.  reduce 22 (src line 118)


state 16
	binaryOrAtomExpression:  unaryExpression.    (20)

	.  reduce 20 (src line 113)


state 17
	unaryExpression:  atomExpression.    (18)

	.  reduce 18 (src line 108)


state 18
	unaryExpression:  unaryOperator.atomExpression 

	IDENTIFY  shift 21
	INT_LITERAL  shift 19
	DOUBLE_LITERAL  shift 20
	'('  shift 22
	.  error

	atomExpression  goto 29

state 19
	atomExpression:  INT_LITERAL.    (11)

	.  reduce 11 (src line 86)


state 20
	atomExpression:  DOUBLE_LITERAL.    (12)

	.  reduce 12 (src line 91)


state 21
	atomExpression:  IDENTIFY.    (13)

	.  reduce 13 (src line 95)


state 22
	atomExpression:  '('.expression ')' 

	IDENTIFY  shift 21
	INT_LITERAL  shift 19
	DOUBLE_LITERAL  shift 20
	ADD  shift 23
	SUB  shift 24
	NOT  shift 25
	'('  shift 22
	.  error

	expression  goto 30
	atomExpression  goto 17
	unaryExpression  goto 16
	binaryOrAtomExpression  goto 15
	unaryOperator  goto 18

state 23
	unaryOperator:  ADD.    (15)

	.  reduce 15 (src line 102)


state 24
	unaryOperator:  SUB.    (16)

	.  reduce 16 (src line 104)


state 25
	unaryOperator:  NOT.    (17)

	.  reduce 17 (src line 105)


state 26
	printStatement:  PRINT '(' expression.')' 

	')'  shift 31
	.  error


state 27
	defineStatement:  TYPE IDENTIFY assign.    (5)

	.  reduce 5 (src line 64)


state 28
	binaryOrAtomExpression:  binaryOrAtomExpression '+'.unaryExpression 

	IDENTIFY  shift 21
	INT_LITERAL  shift 19
	DOUBLE_LITERAL  shift 20
	ADD  shift 23
	SUB  shift 24
	NOT  shift 25
	'('  shift 22
	.  error

	atomExpression  goto 17
	unaryExpression  goto 32
	unaryOperator  goto 18

state 29
	unaryExpression:  unaryOperator atomExpression.    (19)

	.  reduce 19 (src line 110)


state 30
	atomExpression:  '(' expression.')' 

	')'  shift 33
	.  error


state 31
	printStatement:  PRINT '(' expression ')'.    (7)

	.  reduce 7 (src line 75)


state 32
	binaryOrAtomExpression:  binaryOrAtomExpression '+' unaryExpression.    (21)

	.  reduce 21 (src line 115)


state 33
	atomExpression:  '(' expression ')'.    (14)

	.  reduce 14 (src line 99)


35 terminals, 12 nonterminals
23 grammar rules, 34/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
61 working sets used
memory: parser 33/120000
0 extra closures
43 shift entries, 1 exceptions
16 goto entries
10 entries saved by goto default
Optimizer space used: output 40/120000
40 table entries, 3 zero
maximum spread: 35, maximum offset: 35
